# Masterarbeit

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
Docker/: Dockerfile
LaTeX work/: NotesReferences.bib  ResearchNotes.aux  ResearchNotes.bbl  ResearchNotes.blg  ResearchNotes.fdb_latexmk  ResearchNotes.fls  ResearchNotes.tex  ResearchNotes.toc  __latexindent_temp.tex  latexFirstTry.tex
LaTeX work/Expose/: Expose.bbl  Expose.blg  Expose.tex  Expose.toc  ExposeReferences.bib
LaTeX work/Final/: Final.tex  FinalReferences.bib
Python/: manim_test.ipynb  requirements.txt  scikitRFlearning1.py  scikitRFlearning3.ipynb  streamlitTest.py  temps1.csv
Python/.ipynb_checkpoints/: scikitRFlearning2-checkpoint.ipynb
Python/EarlyTests/: networkxtest.py
Python/dashboardv1/: RFmodeller.py  dashboard_controller.py  dashboard_page_creator.py  data_loader.py  data_operator.py  dataframe_operator.py  random_forest_modeller.py  requirements.txt  st_dashboard.py  tutorial.md
Python/dashboardv1/text/: explanation2.md  explanation3.md  tutorial1.md  tutorial5.md
app/: Dockerfile
app/src/dashboardv1/: data_loader.py  (+4 more)
archive/: temps2.csv  testing.ipynb  testing_distance_matrix.ipynb
archive/EarlyTests/: dataset_test.ipynb  scikitRFlearning1.ipynb  scikitRFlearning2.ipynb  scikitRFlearning3.py  streamlitscikitTest.py
archive/baotesting/: baotest.ipynb
src/dashboardv1/: dashboard_controller.py  dashboard_page_creator.py  dataframe_operator.py  random_forest_modeller.py  st_dashboard.py
(+97 files in other folders)
