[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RaFoViewDashboardBetaigeuze"
version = "0.0.1"
authors = [
  { name="Fabio Rougier", email="linoventura1@hotmail.com" },
]
description = "Streamlit-based visualization dashboard for a random forest model built with scikit-learn."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/betaigeuze/Masterarbeit"
"Bug Tracker" = "https://github.com/betaigeuze/Masterarbeit/issues"